fix: nav z-index

--- a/global.css
+++ b/global.css
@@ -2,4 +2,5 @@ nav.header {
   position: fixed;
   top: 16px;
   left: 16px;
+  z-index: 999999;
 }
